src/classes/ethical_governor/parser/EthicalGovernorParser.java
// $ANTLR 3.5.1 /Users/louiseadennis/Eclipse/mcapl/src/classes/ethical_governor/parser/EthicalGovernor.g 2014-09-29 11:20:43

package ethical_governor.parser;

import ail.syntax.ast.*;
import eass.syntax.ast.*;
import ethical_governor.syntax.ast.*;
import java.util.HashMap;


import mcaplantlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

@SuppressWarnings("all")
public class EthicalGovernorParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "AGENT", "CLOSE", "COLON", "COMMA", 
		"COMMENT", "CONST", "CURLYCLOSE", "CURLYOPEN", "DEG", "DIV", "DOUBLEQUOTE", 
		"EQ", "GEQ", "LESS", "LINE_COMMENT", "MINUS", "MOD", "MULT", "NAME", "NEWLINE", 
		"NOT", "NUMBER", "OPEN", "PLUS", "POINT", "PRECEDENCE", "QUERY", "SCORES", 
		"SEMI", "SHRIEK", "SQCLOSE", "SQOPEN", "STRING", "TRUE", "VAR", "WS"
	};
	public static final int EOF=-1;
	public static final int AGENT=4;
	public static final int CLOSE=5;
	public static final int COLON=6;
	public static final int COMMA=7;
	public static final int COMMENT=8;
	public static final int CONST=9;
	public static final int CURLYCLOSE=10;
	public static final int CURLYOPEN=11;
	public static final int DEG=12;
	public static final int DIV=13;
	public static final int DOUBLEQUOTE=14;
	public static final int EQ=15;
	public static final int GEQ=16;
	public static final int LESS=17;
	public static final int LINE_COMMENT=18;
	public static final int MINUS=19;
	public static final int MOD=20;
	public static final int MULT=21;
	public static final int NAME=22;
	public static final int NEWLINE=23;
	public static final int NOT=24;
	public static final int NUMBER=25;
	public static final int OPEN=26;
	public static final int PLUS=27;
	public static final int POINT=28;
	public static final int PRECEDENCE=29;
	public static final int QUERY=30;
	public static final int SCORES=31;
	public static final int SEMI=32;
	public static final int SHRIEK=33;
	public static final int SQCLOSE=34;
	public static final int SQOPEN=35;
	public static final int STRING=36;
	public static final int TRUE=37;
	public static final int VAR=38;
	public static final int WS=39;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public EthicalGovernorParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public EthicalGovernorParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	@Override public String[] getTokenNames() { return EthicalGovernorParser.tokenNames; }
	@Override public String getGrammarFileName() { return "/Users/louiseadennis/Eclipse/mcapl/src/classes/ethical_governor/parser/EthicalGovernor.g"; }


		private static HashMap<String,Abstract_VarTerm> variables = new HashMap<String,Abstract_VarTerm>();
		private Abstract_StringTerm agentname = new Abstract_StringTermImpl("");
		


	// $ANTLR start "mas"
	// /Users/louiseadennis/Eclipse/mcapl/src/classes/ethical_governor/parser/EthicalGovernor.g:59:1: mas returns [Abstract_MAS mas] :glist= degagents ;
	public final Abstract_MAS mas() throws RecognitionException {
		Abstract_MAS mas = null;


		ArrayList<Abstract_EthicalGovernor> glist =null;

		try {
			// /Users/louiseadennis/Eclipse/mcapl/src/classes/ethical_governor/parser/EthicalGovernor.g:59:32: (glist= degagents )
			// /Users/louiseadennis/Eclipse/mcapl/src/classes/ethical_governor/parser/EthicalGovernor.g:59:34: glist= degagents
			{
			mas = new Abstract_MAS();
			pushFollow(FOLLOW_degagents_in_mas89);
			glist=degagents();
			state._fsp--;

			mas.setAgs(glist);
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return mas;
	}
	// $ANTLR end "mas"



	// $ANTLR start "degagents"
	// /Users/louiseadennis/Eclipse/mcapl/src/classes/ethical_governor/parser/EthicalGovernor.g:62:1: degagents returns [ArrayList<Abstract_EthicalGovernor> gags] : DEG (g= degagent )+ ;
	public final ArrayList<Abstract_EthicalGovernor> degagents() throws RecognitionException {
		ArrayList<Abstract_EthicalGovernor> gags = null;


		Abstract_EthicalGovernor g =null;

		try {
			// /Users/louiseadennis/Eclipse/mcapl/src/classes/ethical_governor/parser/EthicalGovernor.g:62:60: ( DEG (g= degagent )+ )
			// /Users/louiseadennis/Eclipse/mcapl/src/classes/ethical_governor/parser/EthicalGovernor.g:62:62: DEG (g= degagent )+
			{
			match(input,DEG,FOLLOW_DEG_in_degagents102); 
			gags=new ArrayList<Abstract_EthicalGovernor>();
			// /Users/louiseadennis/Eclipse/mcapl/src/classes/ethical_governor/parser/EthicalGovernor.g:63:2: (g= degagent )+
			int cnt1=0;
			loop1:
			while (true) {
				int alt1=2;
				int LA1_0 = input.LA(1);
				if ( (LA1_0==NAME) ) {
					alt1=1;
				}

				switch (alt1) {
				case 1 :
					// /Users/louiseadennis/Eclipse/mcapl/src/classes/ethical_governor/parser/EthicalGovernor.g:63:3: g= degagent
					{
					pushFollow(FOLLOW_degagent_in_degagents111);
					g=degagent();
					state._fsp--;

					gags.add(g);
					}
					break;

				default :
					if ( cnt1 >= 1 ) break loop1;
					EarlyExitException eee = new EarlyExitException(1, input);
					throw eee;
				}
				cnt1++;
			}

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return gags;
	}
	// $ANTLR end "degagents"



	// $ANTLR start "degagent"
	// /Users/louiseadennis/Eclipse/mcapl/src/classes/ethical_governor/parser/EthicalGovernor.g:65:1: degagent returns [Abstract_EthicalGovernor g] : ( NAME w= word AGENT w= word ) SCORES (l= word EQ n= numberstring )+ PRECEDENCE (p= pred ( GEQ p1= pred )+ ) ;
	public final Abstract_EthicalGovernor degagent() throws RecognitionException {
		Abstract_EthicalGovernor g = null;


		String w =null;
		String l =null;
		String n =null;
		Abstract_Predicate p =null;
		Abstract_Predicate p1 =null;

		try {
			// /Users/louiseadennis/Eclipse/mcapl/src/classes/ethical_governor/parser/EthicalGovernor.g:65:47: ( ( NAME w= word AGENT w= word ) SCORES (l= word EQ n= numberstring )+ PRECEDENCE (p= pred ( GEQ p1= pred )+ ) )
			// /Users/louiseadennis/Eclipse/mcapl/src/classes/ethical_governor/parser/EthicalGovernor.g:66:2: ( NAME w= word AGENT w= word ) SCORES (l= word EQ n= numberstring )+ PRECEDENCE (p= pred ( GEQ p1= pred )+ )
			{
			// /Users/louiseadennis/Eclipse/mcapl/src/classes/ethical_governor/parser/EthicalGovernor.g:66:2: ( NAME w= word AGENT w= word )
			// /Users/louiseadennis/Eclipse/mcapl/src/classes/ethical_governor/parser/EthicalGovernor.g:66:3: NAME w= word AGENT w= word
			{
			match(input,NAME,FOLLOW_NAME_in_degagent130); 
			pushFollow(FOLLOW_word_in_degagent134);
			w=word();
			state._fsp--;

			try {g = new Abstract_EthicalGovernor(w);} catch (Exception e) {System.err.println(e);}
				              agentname = new Abstract_StringTermImpl(w);
			match(input,AGENT,FOLLOW_AGENT_in_degagent140); 
			pushFollow(FOLLOW_word_in_degagent144);
			w=word();
			state._fsp--;

			String s =  w; g.setGoverned(s); 
			}

			match(input,SCORES,FOLLOW_SCORES_in_degagent156); 
			// /Users/louiseadennis/Eclipse/mcapl/src/classes/ethical_governor/parser/EthicalGovernor.g:70:9: (l= word EQ n= numberstring )+
			int cnt2=0;
			loop2:
			while (true) {
				int alt2=2;
				int LA2_0 = input.LA(1);
				if ( (LA2_0==CONST||LA2_0==VAR) ) {
					alt2=1;
				}

				switch (alt2) {
				case 1 :
					// /Users/louiseadennis/Eclipse/mcapl/src/classes/ethical_governor/parser/EthicalGovernor.g:70:10: l= word EQ n= numberstring
					{
					pushFollow(FOLLOW_word_in_degagent161);
					l=word();
					state._fsp--;

					match(input,EQ,FOLLOW_EQ_in_degagent163); 
					pushFollow(FOLLOW_numberstring_in_degagent167);
					n=numberstring();
					state._fsp--;

					g.addScore(l, n);
					}
					break;

				default :
					if ( cnt2 >= 1 ) break loop2;
					EarlyExitException eee = new EarlyExitException(2, input);
					throw eee;
				}
				cnt2++;
			}

			match(input,PRECEDENCE,FOLLOW_PRECEDENCE_in_degagent174); 
			// /Users/louiseadennis/Eclipse/mcapl/src/classes/ethical_governor/parser/EthicalGovernor.g:71:13: (p= pred ( GEQ p1= pred )+ )
			// /Users/louiseadennis/Eclipse/mcapl/src/classes/ethical_governor/parser/EthicalGovernor.g:71:14: p= pred ( GEQ p1= pred )+
			{
			pushFollow(FOLLOW_pred_in_degagent179);
			p=pred();
			state._fsp--;

			g.addPrec(p);
			// /Users/louiseadennis/Eclipse/mcapl/src/classes/ethical_governor/parser/EthicalGovernor.g:71:41: ( GEQ p1= pred )+
			int cnt3=0;
			loop3:
			while (true) {
				int alt3=2;
				int LA3_0 = input.LA(1);
				if ( (LA3_0==GEQ) ) {
					alt3=1;
				}

				switch (alt3) {
				case 1 :
					// /Users/louiseadennis/Eclipse/mcapl/src/classes/ethical_governor/parser/EthicalGovernor.g:71:42: GEQ p1= pred
					{
					match(input,GEQ,FOLLOW_GEQ_in_degagent184); 
					pushFollow(FOLLOW_pred_in_degagent188);
					p1=pred();
					state._fsp--;

					g.addPrec(p1);
					}
					break;

				default :
					if ( cnt3 >= 1 ) break loop3;
					EarlyExitException eee = new EarlyExitException(3, input);
					throw eee;
				}
				cnt3++;
			}

			}

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return g;
	}
	// $ANTLR end "degagent"



	// $ANTLR start "environment"
	// /Users/louiseadennis/Eclipse/mcapl/src/classes/ethical_governor/parser/EthicalGovernor.g:88:1: environment returns [String env] : w= classpath ;
	public final String environment() throws RecognitionException {
		String env = null;


		String w =null;

		try {
			// /Users/louiseadennis/Eclipse/mcapl/src/classes/ethical_governor/parser/EthicalGovernor.g:88:34: (w= classpath )
			// /Users/louiseadennis/Eclipse/mcapl/src/classes/ethical_governor/parser/EthicalGovernor.g:88:36: w= classpath
			{
			pushFollow(FOLLOW_classpath_in_environment274);
			w=classpath();
			state._fsp--;

			env = w;
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return env;
	}
	// $ANTLR end "environment"



	// $ANTLR start "classpath"
	// /Users/louiseadennis/Eclipse/mcapl/src/classes/ethical_governor/parser/EthicalGovernor.g:89:1: classpath returns [String s] : w= word ( POINT w1= word )+ ;
	public final String classpath() throws RecognitionException {
		String s = null;


		String w =null;
		String w1 =null;

		try {
			// /Users/louiseadennis/Eclipse/mcapl/src/classes/ethical_governor/parser/EthicalGovernor.g:89:30: (w= word ( POINT w1= word )+ )
			// /Users/louiseadennis/Eclipse/mcapl/src/classes/ethical_governor/parser/EthicalGovernor.g:89:32: w= word ( POINT w1= word )+
			{
			pushFollow(FOLLOW_word_in_classpath289);
			w=word();
			state._fsp--;

			s = w;
			// /Users/louiseadennis/Eclipse/mcapl/src/classes/ethical_governor/parser/EthicalGovernor.g:89:52: ( POINT w1= word )+
			int cnt4=0;
			loop4:
			while (true) {
				int alt4=2;
				int LA4_0 = input.LA(1);
				if ( (LA4_0==POINT) ) {
					alt4=1;
				}

				switch (alt4) {
				case 1 :
					// /Users/louiseadennis/Eclipse/mcapl/src/classes/ethical_governor/parser/EthicalGovernor.g:89:53: POINT w1= word
					{
					match(input,POINT,FOLLOW_POINT_in_classpath294); 
					pushFollow(FOLLOW_word_in_classpath298);
					w1=word();
					state._fsp--;

					s+="."; s+=w1;
					}
					break;

				default :
					if ( cnt4 >= 1 ) break loop4;
					EarlyExitException eee = new EarlyExitException(4, input);
					throw eee;
				}
				cnt4++;
			}

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return s;
	}
	// $ANTLR end "classpath"



	// $ANTLR start "word"
	// /Users/louiseadennis/Eclipse/mcapl/src/classes/ethical_governor/parser/EthicalGovernor.g:90:1: word returns [String s] : ( CONST | VAR ) ;
	public final String word() throws RecognitionException {
		String s = null;


		Token CONST1=null;
		Token VAR2=null;

		try {
			// /Users/louiseadennis/Eclipse/mcapl/src/classes/ethical_governor/parser/EthicalGovernor.g:90:25: ( ( CONST | VAR ) )
			// /Users/louiseadennis/Eclipse/mcapl/src/classes/ethical_governor/parser/EthicalGovernor.g:90:27: ( CONST | VAR )
			{
			// /Users/louiseadennis/Eclipse/mcapl/src/classes/ethical_governor/parser/EthicalGovernor.g:90:27: ( CONST | VAR )
			int alt5=2;
			int LA5_0 = input.LA(1);
			if ( (LA5_0==CONST) ) {
				alt5=1;
			}
			else if ( (LA5_0==VAR) ) {
				alt5=2;
			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 5, 0, input);
				throw nvae;
			}

			switch (alt5) {
				case 1 :
					// /Users/louiseadennis/Eclipse/mcapl/src/classes/ethical_governor/parser/EthicalGovernor.g:90:28: CONST
					{
					CONST1=(Token)match(input,CONST,FOLLOW_CONST_in_word399); 
					s =CONST1.getText();
					}
					break;
				case 2 :
					// /Users/louiseadennis/Eclipse/mcapl/src/classes/ethical_governor/parser/EthicalGovernor.g:90:59: VAR
					{
					VAR2=(Token)match(input,VAR,FOLLOW_VAR_in_word405); 
					s =VAR2.getText();
					}
					break;

			}

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return s;
	}
	// $ANTLR end "word"



	// $ANTLR start "agentnameterm"
	// /Users/louiseadennis/Eclipse/mcapl/src/classes/ethical_governor/parser/EthicalGovernor.g:92:1: agentnameterm returns [Abstract_StringTerm s] : ( CONST |v= var );
	public final Abstract_StringTerm agentnameterm() throws RecognitionException {
		Abstract_StringTerm s = null;


		Token CONST3=null;
		Abstract_VarTerm v =null;

		try {
			// /Users/louiseadennis/Eclipse/mcapl/src/classes/ethical_governor/parser/EthicalGovernor.g:92:47: ( CONST |v= var )
			int alt6=2;
			int LA6_0 = input.LA(1);
			if ( (LA6_0==CONST) ) {
				alt6=1;
			}
			else if ( (LA6_0==VAR) ) {
				alt6=2;
			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 6, 0, input);
				throw nvae;
			}

			switch (alt6) {
				case 1 :
					// /Users/louiseadennis/Eclipse/mcapl/src/classes/ethical_governor/parser/EthicalGovernor.g:92:49: CONST
					{
					CONST3=(Token)match(input,CONST,FOLLOW_CONST_in_agentnameterm505); 
					s = new Abstract_StringTermImpl(CONST3.getText());
					}
					break;
				case 2 :
					// /Users/louiseadennis/Eclipse/mcapl/src/classes/ethical_governor/parser/EthicalGovernor.g:92:111: v= var
					{
					pushFollow(FOLLOW_var_in_agentnameterm513);
					v=var();
					state._fsp--;

					s = v;
					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return s;
	}
	// $ANTLR end "agentnameterm"



	// $ANTLR start "literal"
	// /Users/louiseadennis/Eclipse/mcapl/src/classes/ethical_governor/parser/EthicalGovernor.g:95:1: literal returns [Abstract_Literal l] : ( ( TRUE | NOT nt= pred ) |t= pred );
	public final Abstract_Literal literal() throws RecognitionException {
		Abstract_Literal l = null;


		Abstract_Predicate nt =null;
		Abstract_Predicate t =null;

		try {
			// /Users/louiseadennis/Eclipse/mcapl/src/classes/ethical_governor/parser/EthicalGovernor.g:95:37: ( ( TRUE | NOT nt= pred ) |t= pred )
			int alt8=2;
			int LA8_0 = input.LA(1);
			if ( (LA8_0==NOT||LA8_0==TRUE) ) {
				alt8=1;
			}
			else if ( (LA8_0==CONST||LA8_0==VAR) ) {
				alt8=2;
			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 8, 0, input);
				throw nvae;
			}

			switch (alt8) {
				case 1 :
					// /Users/louiseadennis/Eclipse/mcapl/src/classes/ethical_governor/parser/EthicalGovernor.g:95:40: ( TRUE | NOT nt= pred )
					{
					// /Users/louiseadennis/Eclipse/mcapl/src/classes/ethical_governor/parser/EthicalGovernor.g:95:40: ( TRUE | NOT nt= pred )
					int alt7=2;
					int LA7_0 = input.LA(1);
					if ( (LA7_0==TRUE) ) {
						alt7=1;
					}
					else if ( (LA7_0==NOT) ) {
						alt7=2;
					}

					else {
						NoViableAltException nvae =
							new NoViableAltException("", 7, 0, input);
						throw nvae;
					}

					switch (alt7) {
						case 1 :
							// /Users/louiseadennis/Eclipse/mcapl/src/classes/ethical_governor/parser/EthicalGovernor.g:95:41: TRUE
							{
							match(input,TRUE,FOLLOW_TRUE_in_literal529); 
							l = new Abstract_Literal(Abstract_Literal.LTrue);
							}
							break;
						case 2 :
							// /Users/louiseadennis/Eclipse/mcapl/src/classes/ethical_governor/parser/EthicalGovernor.g:96:5: NOT nt= pred
							{
							match(input,NOT,FOLLOW_NOT_in_literal540); 
							pushFollow(FOLLOW_pred_in_literal544);
							nt=pred();
							state._fsp--;


											if (nt instanceof Abstract_VarTerm) 
												{l = (Abstract_VarTerm) nt; l.setNegated(false);}
												else { l = new Abstract_Literal(Abstract_Literal.LNeg, new Abstract_Pred(nt));}
							}
							break;

					}

					}
					break;
				case 2 :
					// /Users/louiseadennis/Eclipse/mcapl/src/classes/ethical_governor/parser/EthicalGovernor.g:100:5: t= pred
					{
					pushFollow(FOLLOW_pred_in_literal558);
					t=pred();
					state._fsp--;

					if (t instanceof Abstract_VarTerm) 
									            {l = (Abstract_VarTerm) t;} 
									            else {l = new Abstract_Literal(Abstract_Literal.LPos, new Abstract_Pred(t));}
					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return l;
	}
	// $ANTLR end "literal"



	// $ANTLR start "pred"
	// /Users/louiseadennis/Eclipse/mcapl/src/classes/ethical_governor/parser/EthicalGovernor.g:104:1: pred returns [Abstract_Predicate t] : (v= var |f= function );
	public final Abstract_Predicate pred() throws RecognitionException {
		Abstract_Predicate t = null;


		Abstract_VarTerm v =null;
		Abstract_Predicate f =null;

		try {
			// /Users/louiseadennis/Eclipse/mcapl/src/classes/ethical_governor/parser/EthicalGovernor.g:104:37: (v= var |f= function )
			int alt9=2;
			int LA9_0 = input.LA(1);
			if ( (LA9_0==VAR) ) {
				alt9=1;
			}
			else if ( (LA9_0==CONST) ) {
				alt9=2;
			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 9, 0, input);
				throw nvae;
			}

			switch (alt9) {
				case 1 :
					// /Users/louiseadennis/Eclipse/mcapl/src/classes/ethical_governor/parser/EthicalGovernor.g:104:39: v= var
					{
					pushFollow(FOLLOW_var_in_pred574);
					v=var();
					state._fsp--;

					t = v;
					}
					break;
				case 2 :
					// /Users/louiseadennis/Eclipse/mcapl/src/classes/ethical_governor/parser/EthicalGovernor.g:104:59: f= function
					{
					pushFollow(FOLLOW_function_in_pred581);
					f=function();
					state._fsp--;

					t = f;
					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return t;
	}
	// $ANTLR end "pred"



	// $ANTLR start "function"
	// /Users/louiseadennis/Eclipse/mcapl/src/classes/ethical_governor/parser/EthicalGovernor.g:105:1: function returns [Abstract_Predicate f] : CONST ( OPEN terms[$f] CLOSE )? ;
	public final Abstract_Predicate function() throws RecognitionException {
		Abstract_Predicate f = null;


		Token CONST4=null;

		try {
			// /Users/louiseadennis/Eclipse/mcapl/src/classes/ethical_governor/parser/EthicalGovernor.g:105:40: ( CONST ( OPEN terms[$f] CLOSE )? )
			// /Users/louiseadennis/Eclipse/mcapl/src/classes/ethical_governor/parser/EthicalGovernor.g:105:42: CONST ( OPEN terms[$f] CLOSE )?
			{
			CONST4=(Token)match(input,CONST,FOLLOW_CONST_in_function593); 
			f = new Abstract_Predicate(CONST4.getText());
			// /Users/louiseadennis/Eclipse/mcapl/src/classes/ethical_governor/parser/EthicalGovernor.g:105:97: ( OPEN terms[$f] CLOSE )?
			int alt10=2;
			int LA10_0 = input.LA(1);
			if ( (LA10_0==OPEN) ) {
				alt10=1;
			}
			switch (alt10) {
				case 1 :
					// /Users/louiseadennis/Eclipse/mcapl/src/classes/ethical_governor/parser/EthicalGovernor.g:105:98: OPEN terms[$f] CLOSE
					{
					match(input,OPEN,FOLLOW_OPEN_in_function598); 
					pushFollow(FOLLOW_terms_in_function600);
					terms(f);
					state._fsp--;

					match(input,CLOSE,FOLLOW_CLOSE_in_function603); 
					}
					break;

			}

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return f;
	}
	// $ANTLR end "function"



	// $ANTLR start "terms"
	// /Users/louiseadennis/Eclipse/mcapl/src/classes/ethical_governor/parser/EthicalGovernor.g:107:1: terms[Abstract_Predicate f] : t= term ( COMMA terms[$f] )? ;
	public final void terms(Abstract_Predicate f) throws RecognitionException {
		Abstract_Term t =null;

		try {
			// /Users/louiseadennis/Eclipse/mcapl/src/classes/ethical_governor/parser/EthicalGovernor.g:107:29: (t= term ( COMMA terms[$f] )? )
			// /Users/louiseadennis/Eclipse/mcapl/src/classes/ethical_governor/parser/EthicalGovernor.g:107:31: t= term ( COMMA terms[$f] )?
			{
			pushFollow(FOLLOW_term_in_terms616);
			t=term();
			state._fsp--;

			f.addTerm(t);
			// /Users/louiseadennis/Eclipse/mcapl/src/classes/ethical_governor/parser/EthicalGovernor.g:107:58: ( COMMA terms[$f] )?
			int alt11=2;
			int LA11_0 = input.LA(1);
			if ( (LA11_0==COMMA) ) {
				alt11=1;
			}
			switch (alt11) {
				case 1 :
					// /Users/louiseadennis/Eclipse/mcapl/src/classes/ethical_governor/parser/EthicalGovernor.g:107:59: COMMA terms[$f]
					{
					match(input,COMMA,FOLLOW_COMMA_in_terms621); 
					pushFollow(FOLLOW_terms_in_terms623);
					terms(f);
					state._fsp--;

					}
					break;

			}

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "terms"


